# infosearch

./: .gitignore  README.md
project/: pyproject.toml
project/server/boolean_search/: launcher.py  search_results.json  search_results_indexed.json  search_results_lsi.json  search_results_vector_model.json
project/server/boolean_search/parser/data/: dto.py  load_data.py
project/server/boolean_search/parser/queries/: search.py
project/server/crawler/: article_results.xml  launcher.py  urls.txt
project/server/crawler/parser/: article_info_retrieve.py  dto.py  links_retrieve.py
project/server/crawler/xml/: create_xml.py
project/server/inverted_index/: inverted_index(tf_idf).xml  inverted_index.xml  launcher.py
project/server/inverted_index/index/: building.py  dto.py  sorting.py
project/server/inverted_index/processing/: process_input.py
project/server/inverted_index/xml_work/: create_xml.py  dto.py  load_data.py
project/server/stemmer/: launcher.py  result_data.txt
project/server/stemmer/processing/: clear_text.py  lemmatize.py
project/server/stemmer/xml_load/: dto.py  load_data.py
