[tool.poetry]
name = "information_search"
version = "0.0.1"
description = "Project for \"Introduction to information search\" course"
authors = ["Андрей Романов <romanov_andrey_vl@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.0"
BeautifulSoup4 = "^4.8.2"
requests = "^2.23.0"
nltk = "^3.4.5"
pymystem3 = "^0.2.0"
numpy = "^1.18.2"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
